fixed errors after docker test